2011-03-13  Paul Eggert  <eggert@cs.ucla.edu>

	* image.c (four_corners_best): Mark locals as initialized.
	(gif_load): Initialize transparent_p to zero (Bug#8238).
	Mark another local as initialized.
	(my_png_error, my_error_exit): Mark with NO_RETURN.

2011-03-11  Paul Eggert  <eggert@cs.ucla.edu>

	* image.c (clear_image_cache): Now static.
	(DIM, HAVE_STDLIB_H_1): Remove unused macros.
	(xpm_load): Redo to avoid "discards qualifiers" gcc warning.
	(x_edge_detection): Remove unnecessary cast that
	gcc -Wbad-function-cast diagnoses.
	(gif_load): Fix pointer signedness.
	(clear_image_cache, xbm_read_bitmap_data, x_detect_edges):
	(jpeg_load, gif_load): Rename locals to avoid shadowing.

2011-03-11  Paul Eggert  <eggert@cs.ucla.edu>

	Fix some minor problems found by GCC 4.5.2's static checks.

	* fringe.c (update_window_fringes): Mark locals as initialized
	(Bug#8227).
	(destroy_fringe_bitmap, init_fringe_bitmap): Now static.

	* alloc.c (mark_fringe_data): Move decl from here ...
	* lisp.h (mark_fringe_data) [HAVE_WINDOW_SYSTEM]: ... to here,
	to check its interface.
	(init_fringe_once): Do not declare unless HAVE_WINDOW_SYSTEM.

	* fontset.c (free_realized_fontset): Now static.
	(Fset_fontset_font): Rename local to avoid shadowing.
	(fontset_font): Mark local as initialized.
	(FONTSET_SPEC, FONTSET_REPERTORY, RFONT_DEF_REPERTORY): Remove; unused.

	* xrdb.c: Include "xterm.h", to check x_load_resources's interface.

	* xselect.c (x_disown_buffer_selections): Remove; not used.
	(TRACE3) [!defined TRACE_SELECTION]: Remove; not used.
	(x_own_selection, Fx_disown_selection_internal): Rename locals
	to avoid shadowing.
	(x_handle_dnd_message): Remove local to avoid shadowing.

	* lisp.h (GCPRO1_VAR, UNGCPRO_VAR): New macros,
	so that the caller can use some name other than gcpro1.
	(GCPRO1, UNGCPRO): Reimplement in terms of the new macros.
	* xfns.c (Fx_create_frame, x_create_tip_frame, Fx_show_tip):
	(Fx_backspace_delete_keys_p):