@@ -1,5 +1,7 @@
 2011-03-13  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* xgselect.c (xg_select): Remove unused var.
+
 	* image.c (four_corners_best): Mark locals as initialized.
 	(gif_load): Initialize transparent_p to zero (Bug#8238).
 	Mark another local as initialized.
